--- a/app/src/main/res/layout/lecture_item.xml
+++ b/app/src/main/res/layout/lecture_item.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:layout_margin="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    app:cardCornerRadius="16dp"
     style="@style/Widget.Material3.CardView.Elevated">
 
 <LinearLayout
