--- a/app/src/main/res/drawable/ic_placeholder.xml
+++ b/app/src/main/res/drawable/ic_placeholder.xml
@@ -3,8 +3,8 @@
     android:height="16dp"
     android:viewportWidth="16"
     android:viewportHeight="16"
-    android:tint="?attr/colorControlNormal">
+    android:tint="@color/grey_font">
   <path
-      android:pathData="M0.002,3a2,2 0,0 1,2 -2h12a2,2 0,0 1,2 2v10a2,2 0,0 1,-2 2h-12a2,2 0,0 1,-2 -2L0.002,3zM1.002,12v1a1,1 0,0 0,1 1h12a1,1 0,0 0,1 -1L15.002,9.5l-3.777,-1.947a0.5,0.5 0,0 0,-0.577 0.093l-3.71,3.71 -2.66,-1.772a0.5,0.5 0,0 0,-0.63 0.062L1.002,12zM6.002,5.5a1.5,1.5 0,1 0,-3 0,1.5 1.5,0 0,0 3,0z"
-      android:fillColor="@android:color/tab_indicator_text"/>
+      android:fillColor="#FF000000"
+      android:pathData="M7.61,7.75c0,-0.05 0.04,-0.1 0.1,-0.1h0.59c0.05,0 0.1,0.04 0.1,0.1v0.49c0,0.05 -0.04,0.1 -0.1,0.1h-0.59c-0.05,0 -0.1,-0.04 -0.1,-0.1 0,0 0,-0.49 0,-0.49ZM7.66,8.19v0.05s0.02,0.05 0.05,0.05h0.59s0.05,-0.02 0.05,-0.05v-0.17l-0.19,-0.1s-0.02,0 -0.03,0l-0.18,0.18 -0.13,-0.09s-0.02,0 -0.03,0l-0.13,0.12ZM7.91,7.87s-0.03,-0.07 -0.07,-0.07 -0.07,0.03 -0.07,0.07 0.03,0.07 0.07,0.07 0.07,-0.03 0.07,-0.07Z"/>
 </vector>
