--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -31,9 +31,9 @@
                         android:text="This week"
                         android:textSize="24sp"
                         android:textColor="?attr/colorPrimary"
-                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginHorizontal="16dp"
                         android:layout_marginTop="8dp"
-                        android:layout_marginBottom="4dp"
+                        android:layout_marginBottom="2dp"
                         android:textStyle="bold"
                         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
                 </LinearLayout>
@@ -41,7 +41,7 @@
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="8dp"
                     app:cardCornerRadius="8dp"
                     app:strokeWidth="0dp"
@@ -56,7 +56,7 @@
                         android:textColor="?attr/colorOnSecondaryContainer"
                         android:textSize="14sp"
 
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
@@ -65,7 +65,6 @@
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="16dp"
                     app:strokeWidth="0dp"
-                    android:layout_marginHorizontal="16dp"
                     android:visibility="visible">
 
                     <LinearLayout
@@ -79,6 +78,7 @@
                             android:layout_height="150dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginBottom="4dp"
+                            android:layout_marginHorizontal="8dp"
                             app:cardCornerRadius="16dp"
                             style="@style/Widget.Material3.CardView.Elevated">
                             <LinearLayout
@@ -192,6 +192,7 @@
                             android:layout_height="150dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginBottom="4dp"
+                            android:layout_marginHorizontal="8dp"
                             app:cardCornerRadius="16dp"
                             style="@style/Widget.Material3.CardView.Elevated">
                             <LinearLayout
@@ -331,15 +332,15 @@
                     android:text="Next Week"
                     android:textSize="24sp"
                     android:textColor="?attr/colorPrimary"
-                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginBottom="2dp"
                     android:textStyle="bold"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="8dp"
                     app:cardCornerRadius="8dp"
                     app:strokeWidth="0dp"
@@ -358,7 +359,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:cardCornerRadius="16dp"
-                    android:layout_marginHorizontal="16dp"
                     app:strokeWidth="0dp">
                     <LinearLayout
                         android:id="@+id/lectureShimmerNextWeek"
@@ -371,6 +371,7 @@
                             android:layout_height="150dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginBottom="4dp"
+                            android:layout_marginHorizontal="8dp"
                             app:cardCornerRadius="16dp"
                             style="@style/Widget.Material3.CardView.Elevated">
                             <LinearLayout
@@ -484,6 +485,7 @@
                             android:layout_height="150dp"
                             android:layout_marginTop="4dp"
                             android:layout_marginBottom="4dp"
+                            android:layout_marginHorizontal="8dp"
                             app:cardCornerRadius="16dp"
                             style="@style/Widget.Material3.CardView.Elevated">
                             <LinearLayout
@@ -625,7 +627,7 @@
                     android:id="@+id/userQuestionsCardView"
                     android:layout_width="160dp"
                     android:layout_height="90dp"
-                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginHorizontal="8dp"
                     android:layout_weight="1"
                     android:layout_marginTop="2dp"
                     android:layout_marginBottom="4dp"
@@ -682,7 +684,9 @@
 
 
 
-            </LinearLayout><LinearLayout
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -692,7 +696,7 @@
                 android:id="@+id/userClubsCardView"
                 android:layout_width="160dp"
                 android:layout_height="90dp"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
                 android:layout_marginVertical="4dp"
                 android:clickable="true"
@@ -760,7 +764,7 @@
                     android:id="@+id/userContactsCardView"
                     android:layout_width="160dp"
                     android:layout_height="90dp"
-                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginHorizontal="8dp"
                     android:layout_weight="1"
                     android:layout_marginVertical="4dp"
                     android:clickable="true"
@@ -824,7 +828,7 @@
                 android:id="@+id/userLostFoundCardView"
                 android:layout_width="160dp"
                 android:layout_height="90dp"
-                android:layout_marginHorizontal="16dp"
+                android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
                 android:layout_marginVertical="4dp"
                 android:clickable="true"
@@ -890,7 +894,7 @@
                     android:id="@+id/userCareerCardView"
                     android:layout_width="160dp"
                     android:layout_height="90dp"
-                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginHorizontal="8dp"
                     android:layout_weight="1"
                     android:layout_marginVertical="4dp"
                     android:clickable="true"
@@ -950,12 +954,5 @@
         </LinearLayout>
 
     </ScrollView>
-
-    <ProgressBar
-        android:id="@+id/userEventProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone"/>
 
 </RelativeLayout>
