--- a/app/src/main/res/layout/user_lecture_item.xml
+++ b/app/src/main/res/layout/user_lecture_item.xml
@@ -5,6 +5,7 @@
     android:layout_height="150dp"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
+    android:layout_marginHorizontal="8dp"
     app:cardCornerRadius="16dp"
     style="@style/Widget.Material3.CardView.Elevated">
 
