--- a/app/src/main/res/layout/user_newsfeed_item_layout.xml
+++ b/app/src/main/res/layout/user_newsfeed_item_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginVertical="4dp"
+    android:layout_marginBottom="4dp"
     app:cardCornerRadius="0dp"
     android:backgroundTint="@android:color/transparent"
     app:strokeWidth="0dp">
