--- a/app/src/main/res/drawable/colleger_logo_login.xml
+++ b/app/src/main/res/drawable/colleger_logo_login.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="257.12"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <path
-        android:fillColor="#1f5eaa"
+        android:fillColor="#2b74bc"
         android:pathData="M214.26,119.28c0,48.04 -39.52,86.84 -87.83,85.67 -45.11,-1.09 -82,-37.62 -83.52,-82.71 -0.84,-24.84 8.89,-47.41 25.04,-63.56 6.07,-6.07 16.26,-0.29 14.01,7.99 -1.1,4.04 -1.68,8.29 -1.68,12.68s0.61,8.84 1.77,12.97c5.67,20.36 24.34,35.3 46.51,35.3s40.84,-14.95 46.51,-35.3c1.16,-4.13 1.77,-8.47 1.77,-12.97s-0.59,-8.64 -1.68,-12.68c-2.25,-8.28 7.95,-14.05 14.02,-7.98 15.5,15.5 25.09,36.92 25.09,60.59Z"/>
     <path
         android:fillColor="#34b734"
