--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -605,12 +605,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:id="@+id/resources"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Resources"
                     android:textSize="24sp"
                     android:textColor="?attr/colorPrimary"
-                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginTop="8dp"
 
                     android:textStyle="bold"
